# FTDD

./: .gitignore  LICENSE  Makefile  README.md
BenchFTDD/: BenchFTDD.py  BenchGTN.py  BenchPyTDD.py
BenchFTDD/TestCases/: TestEQFT.py  TestGRQC16.py  TestGraphState.py  TestQAOA.py  TestQFT.py  TestVQE.py
BenchQMDD/: BenchQMDD.py
BenchQMDD/TestCases/: TestEQFT.py  TestGHZ.py  TestGRQC.py  TestGraphState.py  TestQAOA.py  TestQFT.py  TestVQE.py
Benchmarks/MQTbench/: MQTbenchGenQASM.py
Benchmarks/MQTbench/GRQC/: inst_4x4_10_8.qasm  inst_4x5_10_8.qasm  inst_4x5_12_8.qasm  inst_4x5_14_8.qasm  inst_4x5_16_8.qasm  inst_4x5_20_8.qasm
Benchmarks/MQTbench/ghz/: ghz_10.qasm  ghz_100.qasm  ghz_101.qasm  ghz_102.qasm  ghz_103.qasm  ghz_104.qasm  ghz_105.qasm  ghz_106.qasm  ghz_107.qasm  ghz_108.qasm  ghz_109.qasm  ghz_11.qasm  ghz_110.qasm  ghz_111.qasm  ghz_112.qasm  ghz_113.qasm  ghz_114.qasm  ghz_115.qasm  ghz_116.qasm  ghz_117.qasm  ghz_118.qasm  ghz_119.qasm  ghz_12.qasm  ghz_120.qasm  ghz_121.qasm  ghz_122.qasm  ghz_123.qasm  ghz_124.qasm  ghz_125.qasm  ghz_126.qasm  ghz_127.qasm  ghz_128.qasm  ghz_129.qasm  ghz_13.qasm  ghz_14.qasm  ghz_15.qasm  ghz_16.qasm  ghz_17.qasm  ghz_18.qasm  ghz_19.qasm  (+88 more)
Benchmarks/MQTbench/graph_state/: graph_state_10.qasm  graph_state_11.qasm  graph_state_12.qasm  (+45 more)
Benchmarks/Verification/: 3_17_13_2.qasm  inst_4x4_12_8.qasm  inst_4x4_14_8.qasm  inst_4x4_16_8.qasm
TestFTDD/: DemoFTDD.py  VerifyFTDD.py
source/: TDD.py  TDD_Q.py  TN.py
source/cpp/: CMakeLists.txt  cTDD.cpp  cTDD.hpp  cTddComputedCache.hpp  cTddUniqueTable.hpp
(+71 files in other folders)
